# src/controllers/users.controller.ts
@@ -18,6 +18,7 @@ import {
   UpdateUserReqBody,
   VerifyEmailReqBody,
   VerifyForgotPasswordReqBody,
+  changePasswordReqBody,
   updateOrderReqBody
 } from '~/models/requests/user.request';
 import User from '~/models/schemas/User.schemas';
@@ -295,4 +296,29 @@ export const updateOrderController = async (req: Request<ParamsDictionary, any, 
     message: USERS_MESSAGES.UPDATE_ORDER_SUCCESS,
     result
   });
+};
+
+export const getAllContractController = async (req: Request, res: Response) => {
+  // const { user_id } = req.decoded_authorization as TokenPayload;
+  // if (![RoleName.ADMIN, RoleName.STAFF].includes(await usersService.getRole(user_id))) {
+  //   throw new ErrorWithStatus({
+  //     message: USERS_MESSAGES.USER_NOT_ACCESS,
+  //     status: HTTP_STATUS.UNAUTHORIZED
+  //   });
+  // }
+  const result = await usersService.getAllContract();
+  return res.json({
+    message: USERS_MESSAGES.GET_ALL_CONTRACT_SUCCESS,
+    result
+  });
+};
+
+export const changePasswordController = async (
+  req: Request<ParamsDictionary, any, changePasswordReqBody>,
+  res: Response
+) => {
+  const { user_id } = req.decoded_authorization as TokenPayload;
+  const { old_password, new_password, confirm_password } = req.body as changePasswordReqBody;
+  const result = await usersService.changePassword(user_id, { old_password, new_password, confirm_password });
+  return res.json(result);
 };
